--- a/cpg1.5.x/themes/fruity/style.css
+++ b/cpg1.5.x/themes/fruity/style.css
@@ -443,8 +443,6 @@ a:hover.yebg {
 .admin_menu a {
         color: #000000;
         text-decoration: none;
-        display: block;
-        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 2px;
@@ -464,7 +462,9 @@ a:hover.yebg {
         margin-top: 1px;
         margin-bottom: 1px;
         max-height:1.5em;
-        overflow:hidden;
+        display: block;
+        position: relative;
+        white-space:nowrap;
         /*width:100px;*/
 }
 
