--- a/cpg1.5.x/themes/rainy_day/style.css
+++ b/cpg1.5.x/themes/rainy_day/style.css
@@ -423,8 +423,6 @@ a:hover {
 .admin_menu a {
         color: #000000;
         text-decoration: none;
-        display: block;
-        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 2px;
@@ -443,7 +441,9 @@ a:hover {
         margin-top: 1px;
         margin-bottom: 1px;
         max-height:1.5em;
-        overflow:hidden;
+        display: block;
+        position: relative;
+        white-space:nowrap;
         /*width:100px;*/
 }
 
