--- a/cpg1.5.x/themes/sample/style.css
+++ b/cpg1.5.x/themes/sample/style.css
@@ -436,8 +436,6 @@ a:active {
 .admin_menu a {
         color: #000000;
         text-decoration: none;
-        display: block;
-        position: relative;
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 2px;
@@ -457,11 +455,15 @@ a:active {
         margin-bottom: 1px;
         max-height:1.5em;
         overflow:hidden;
+        white-space:nowrap;
+        display: block;
+        position: relative;
         /*width:100px;*/
 }
 
 .admin_menu_wrapper {
         width:100%;
+        white-space:normal;
 }
 
 #admin_menu_anim {
